--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.2",
+    "@react-native-picker/picker": "^1.16.0",
     "expo": "38",
     "expo-image-manipulator": "~8.2.1",
     "expo-image-picker": "~8.3.0",
